--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ pandas = "^2.3.0"
 poetry-core = "^2.1.3"
 
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^3.3.7"
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
