ci: Flake8 lint verify added

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -24,3 +24,6 @@ jobs:
     - name: Run Pylint
       run: |
         poetry run pylint $(git ls-files '*.py' ':!:alembic/versions/*')
+    - name: Run flake8
+      run: |
+        poetry run flake8
