--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,21 @@ poetry-core = "^2.1.3"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.7"
+flake8 = "^7.2.0"
+
+[tool.flake8]
+max-line-length = 120
+extend-ignore = [
+    "E203",
+    "W503",
+]
+exclude = [
+    ".git",
+    "__pycache__",
+    "alembic/versions",
+    "migrations",
+    "tests",
+]
 
 
 [build-system]
