fix: URL cors origins in .env.example

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ FRONTEND_URL=http://localhost:4200
 ENVIRONMENT=development
 PROJECT_NAME="Fast API Starter Template"
 VERSION="0.1.0"
-BACKEND_CORS_ORIGINS="http://localhost,http://localhost:4200,https://localhost,https://localhost:4200,http://localhost:8100,https://localhost:8100"
+BACKEND_CORS_ORIGINS="http://localhost:5173,https://localhost:5173"
 SECRET_KEY=changethis
 TOKEN_ALGORITHM=HS256
 ADMIN_USER=admin@example.com
